[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/levels/test_grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/props/grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/fungus.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/entities/control_camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/props/grid_editor.gd" type="Script" id=5]
[ext_resource path="res://src/entities/ai.gd" type="Script" id=6]
[ext_resource path="res://src/states/game/player_turn.gd" type="Script" id=7]
[ext_resource path="res://src/states/game/nature_turn.gd" type="Script" id=8]
[ext_resource path="res://scenes/world_env.tres" type="Environment" id=9]
[ext_resource path="res://src/states/state_machine.gd" type="Script" id=10]
[ext_resource path="res://src/states/game/ai_turn.gd" type="Script" id=11]
[ext_resource path="res://src/main_menu.gd" type="Script" id=12]
[ext_resource path="res://scenes/ui/mappable-keys/options_menu.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/entities/DirectionalLight.gd" type="Script" id=14]
[ext_resource path="res://src/WorldEnvironment.gd" type="Script" id=15]
[ext_resource path="res://scenes/props/beach.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/props/water.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/ui/theme.tres" type="Theme" id=18]

[node name="main_menu" type="Spatial"]
script = ExtResource( 12 )

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 10 )

[node name="player_turn" type="Node" parent="state_machine"]
script = ExtResource( 7 )

[node name="ai_turn" type="Node" parent="state_machine"]
script = ExtResource( 11 )

[node name="nature_turn" type="Node" parent="state_machine"]
script = ExtResource( 8 )

[node name="grid" parent="." instance=ExtResource( 2 )]

[node name="water" parent="." instance=ExtResource( 17 )]

[node name="beach" parent="." instance=ExtResource( 16 )]

[node name="Test_Grid" parent="." instance=ExtResource( 1 )]
script = ExtResource( 5 )
show_tiles_in_editor = true

[node name="Control_Camera" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 8, 6, 15 )
current = false
script = null

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu_Options" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu_Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="CanvasLayer/Menu_Options/VBoxContainer"]
margin_right = 91.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play Game"

[node name="zen_button" type="Button" parent="CanvasLayer/Menu_Options/VBoxContainer"]
margin_top = 54.0
margin_right = 91.0
margin_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Zen Mode"

[node name="options_button" type="Button" parent="CanvasLayer/Menu_Options/VBoxContainer"]
margin_top = 108.0
margin_right = 91.0
margin_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Options"

[node name="quit_button" type="Button" parent="CanvasLayer/Menu_Options/VBoxContainer"]
margin_top = 162.0
margin_right = 91.0
margin_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Options"

[node name="options_menu" parent="CanvasLayer" instance=ExtResource( 13 )]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 9 )
script = ExtResource( 15 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 0.34202, -0.538986, 0.769751, 7.16125e-08, 0.819152, 0.573577, -0.939693, -0.196175, 0.280166, 228.275, 154.801, 48.0567 )
light_energy = 2.0
shadow_enabled = true
script = ExtResource( 14 )

[node name="player" type="Spatial" parent="." groups=[
"player",
]]
script = ExtResource( 6 )

[node name="fungus" parent="player" instance=ExtResource( 3 )]

[node name="ai" type="Spatial" parent="." groups=[
"ai",
]]
script = ExtResource( 6 )

[node name="fungus" parent="ai" instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="CanvasLayer/Menu_Options/VBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu_Options/VBoxContainer/zen_button" to="." method="_on_zen_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu_Options/VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu_Options/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Test_Grid"]
